--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -4,4 +4,6 @@
   <h3> Name : {{ product.name }}</h3>
   <h4> Price :  {{ product.price | currency }}</h4>
   <p>  Description : {{ product.description }}</p>
+
+   <button (click)="addToCart(product)">Buy</button>
 </div>
